assets/styles/custom.scss
// Add your own CSS here!

body {
  margin: 0;
  height: 100vh;
  width: 100vw;
  max-width: 100%;
  box-sizing: border-box;
  margin-top: 0px;
  margin-bottom: 0px;
  background-color: var(--bgtest);
  line-height: 1.2; // Adjust this value as needed
  font-weight: 300; // Or use "normal" for less boldness
  
}

/*
hr {  //This styles the navigation lines
  margin: 1em auto;
}
*/

h1 {
  color: var(--dark);
}

h2 {
  color: var(--dark);
  font-size: 1.3em;
}

h3 {
  color: var(--gray3);
  font-size: 1.05em;
  font-weight: 350; // Or use "normal" for less boldness
  font-style: italic; // Makes the text italic
  margin-top: 16px;
  margin-bottom: 0;
}


a:has(h3) + p { //This selects the first paragraph after h3 and applies below stylings to that paragraph
  margin-top: 4px;
  margin-bottom: 0;
}

h4 {
  color: var(--gray3);
  font-size: 1.25em;
  font-weight: 300; // Or use "normal" for less boldness
  font-style: italic; // Makes the text italic
}

h5 {
  color: var(--dark);
  font-size: 1em;
  font-weight: 400; // Or use "normal" for less boldness
  font-style: italic; // Makes the text italic
}

h6 {
  color: var(--dark);
  font-size: 1.1em;
  font-weight: 400; // Or use "normal" for less boldness
}

img {
  max-width: 70%;
  height: auto; /* Maintain the aspect ratio */
  border-radius: 3px;
}

/* Media query for mobile devices */
@media (max-width: 768px) {
  img {
    max-width: 95%; /* You can set this to a higher percentage for mobile */
  }
}

.blurb {
  font-size: 1.25rem;
  font-weight: 300; // Or use "normal" for less boldness
  color: var(--dark);
}

blockquote {
  margin-left: 60px;
  border-left: 3px solid var(--quote);
  padding-left: 1em;
  transition: border-color 0.2s ease;
  p:last-of-type {
    margin-left: 25px;
  }
}
 
:root {
  --light: #faf8f8;
  --bgtest: #ffdfbd3a;
  --dark: #141021;
  --secondary: #0c6fb1;
  --tertiary: #84a59d;
  --quote: #fcb196;
  --visited: #afbfc9;
  --primary: #1b6040;
  --gray: #4e4e4e;
  --gray2: #575757;
  --gray3: #222222;
  --lightgray: #f0f0f0;
  --outlinegray: #dadada;
  --calloutbg: #dee5ff2e; 
  --million-progress-bar-color: var(--secondary);
  --highlighted: #96aefc46;
}

[saved-theme="dark"] {
  --light: #1e1e21 !important;
  --dark: #fbfffe !important;
  --secondary: #6b879a !important;
  --visited: #4a575e !important;
  --tertiary: #84a59d !important;
  --primary: #f58382 !important;
  --gray: #d4d4d4 !important;
  --lightgray: #292633 !important;
  --outlinegray: #343434 !important;
  --highlighted: #574010;
}

